# pulumi-prefect

./: .ci-mgmt.yaml  .gitignore  .gitmodules  .golangci.yml  .goreleaser.prerelease.yml  .goreleaser.yml  .upgrade-config.yml  Makefile  README.md  devbox.json
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: check-upstream-upgrade.yml  lint.yml  main.yml  master.yml  prerelease.yml  release.yml  upgrade-bridge.yml  upgrade-provider.yml
examples/: go.mod
examples/python/: requirements.txt
provider/: go.mod  go.sum  resources.go
provider/shim/: go.mod  go.sum  shim.go
scripts/: upstream.sh
sdk/: go.mod
sdk/dotnet/: Account.cs  GetAccount.cs  GetAccountMember.cs  GetAccountMembers.cs  GetAccountRole.cs  GetServiceAccount.cs  GetTeam.cs  GetTeams.cs  GetVariable.cs  GetWorkPool.cs  GetWorkPools.cs  GetWorkerMetadata.cs  GetWorkspace.cs  GetWorkspaceRole.cs  Provider.cs  Pulumi.Prefect.csproj  ServiceAccount.cs  Utilities.cs  Variable.cs  WorkPool.cs  (+3 more)
sdk/python/: README.md  pyproject.toml  setup.py
sdk/python/pulumi_prefect/: README.md  __init__.py  _utilities.py  account.py  get_account.py  get_account_member.py  get_account_members.py  get_account_role.py  get_service_account.py  get_team.py  get_teams.py  get_variable.py  get_work_pool.py  get_work_pools.py  get_worker_metadata.py  get_workspace.py  get_workspace_role.py  outputs.py  provider.py  service_account.py  variable.py  work_pool.py  workspace.py  workspace_access.py  workspace_role.py
sdk/python/pulumi_prefect/config/: __init__.pyi  vars.py
upstream/: go.mod  go.sum
(+66 files in other folders)
