[project]
  name = "pulumi_prefect"
  description = "A Pulumi package for creating and managing Prefect cloud resources."
  dependencies = ["parver>=0.2.1", "pulumi>=3.0.0,<4.0.0", "semver>=2.8.1"]
  keywords = ["prefect", "prefect-cloud", "category/cloud"]
  readme = "README.md"
  requires-python = ">=3.8"
  version = "0.0.0"
  [project.license]
    text = "Apache-2.0"
  [project.urls]
    Homepage = "https://www.pulumi.com"
    Repository = "https://github.com/ru5j4r0/pulumi-prefect"

[build-system]
  requires = ["setuptools>=61.0"]
  build-backend = "setuptools.build_meta"

[tool]
  [tool.setuptools]
    [tool.setuptools.package-data]
      pulumi_prefect = ["py.typed", "pulumi-plugin.json"]
